html-css primer ejercicio

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Static Template</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
-    <div id="app"></div>
+    <h1>Listas, colores y mas... mucho mas</h1>
+    <p class="liEspecial tamanio">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quam
+      recusandae unde tenetur illum officia porro, impedit ad quibusdam
+      voluptates asperiores vitae! Voluptates, alias cumque soluta doloremque
+      sed mollitia? Tempore?
+    </p>
+    <ul>
+      <a href="">lalala</a>
+      <li><a href="">Item 1</a></li>
+      <li class="liEspecial"><a href="">Item 2</a></li>
+      <li class="liEspecial tamanio"><a href="">Item 3</a></li>
+      <li><a href="">Item 4</a></li>
+    </ul>
 
-    <script src="Ejercicios-entregar/algoritmo-d-ordenamiento.ts"></script>
+    <ol>
+      <li><a href="">Item 1</a></li>
+      <li id="elMejorLi">Item 2</li>
+      <li>Item 3</li>
+      <li class="tamanio">Item 4</li>
+    </ol>
+
+    <div></div>
   </body>
 </html>
