primer-pagina hice el primer avance

--- a/index.html
+++ b/index.html
@@ -8,27 +8,38 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Listas, colores y mas... mucho mas</h1>
-    <p class="liEspecial tamanio">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quam
-      recusandae unde tenetur illum officia porro, impedit ad quibusdam
-      voluptates asperiores vitae! Voluptates, alias cumque soluta doloremque
-      sed mollitia? Tempore?
-    </p>
-    <ul>
-      <a href="">lalala</a>
-      <li><a href="">Item 1</a></li>
-      <li class="liEspecial"><a href="">Item 2</a></li>
-      <li class="liEspecial tamanio"><a href="">Item 3</a></li>
-      <li><a href="">Item 4</a></li>
-    </ul>
+    <h1>Mi primer pág. y mucho mas!!!</h1>
 
-    <ol>
-      <li><a href="">Item 1</a></li>
-      <li id="elMejorLi">Item 2</li>
-      <li>Item 3</li>
-      <li class="tamanio">Item 4</li>
-    </ol>
+    <h2>
+      Dentro de nuestro proceso de sanación debemos de tomar conciencia de los
+      comportamientos que hacen que trunquen nuestro camino de crecimiento y
+      madurez.
+    </h2>
+    <p class="liEspecial tamanio">
+      Así que dejemos de:
+    </p>
+    <h2>PRIMERO</h2>
+    <p class="liEspecial tamanio">
+      . Asumir que tu solución o ideología es la mejor . Descartar otros puntos
+      de vista.
+    </p>
+    <h2>SEGUNDO</h2>
+    <p class="liEspecial tamanio">
+      . Menospreciar y criticar a los demás para reforzar tu autoestima .
+      Señalar lo que los demás hicieron mal sin tomar ninguna responsabilidad .
+      Jugar el papel de víctima.
+    </p>
+
+    <h2>TERCERO</h2>
+    <p class="liEspecial tamanio">
+      . Descartar la posibilidad de que las cosas surjan de manera positiva .
+      Buscar la perfección en las personas.
+    </p>
+
+    <h2>CUARTO</h2>
+    <p class="liEspecial tamanio">
+      . Mentir como forma de evasión a la confrontación.
+    </p>
 
     <div></div>
   </body>
